--- a/index.html
+++ b/index.html
@@ -1,20 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>To-Do List</title>
-    <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>To-Do List</title>
+  <!-- Bootstrap CSS CDN -->
+   <link rel="stylesheet" href="style.css">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
-<body>
-    <div class="container">
-        <h1>My To-Do List</h1>
-        <div class="input-section">
-            <input type="text" id="inpt" placeholder="Enter a task...">
-            <button id="add">Add</button>
-        </div>
-        <ul id="taskList"></ul>
+<body class="bg-light d-flex align-items-center justify-content-center vh-100">
+
+  <div class="card shadow-lg p-4" style="width: 100%; max-width: 500px;">
+    <h2 class="text-center mb-4">To-Do List</h2>
+
+    <!-- Input Section -->
+    <div class="input-group mb-4">
+      <input type="text" id="inpt" class="form-control" placeholder="Enter a task...">
+      <button id="add" class="btn btn-primary">Add</button>
     </div>
 
-    <script src="script.js"></script>
+    <!-- Task List -->
+    <ul id="task-list" class="list-group">
+      <!-- Tasks will appear here -->
+       
+    </ul>
+  </div>
+
+  <script src="script.js"></script>
+
 </body>
 </html>
